removes print; if statement to avoid repetition

--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -55,32 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'11110209_5752173': '5558007:3',\n",
-       " '19193456_23452389': '9668810:1',\n",
-       " '663726_9048846': '4107215:1',\n",
-       " '6178566_6097931': '8733868:1',\n",
-       " '8184873_13389052': '6536081:1',\n",
-       " '5933740_15640897': '8593453:1',\n",
-       " '1837912_2946514': '9443662:6',\n",
-       " '16864707_22008180': '11071817:1',\n",
-       " '13583494_15294065': '657327:1',\n",
-       " '18679314_8042043': '11954734:1,11954739:5',\n",
-       " '18679314_8042040': '11954736:1'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "word_occurence_map"
+    "from difflib import SequenceMatcher\n",
+    "return max([(word, SequenceMatcher(lambda x: x == \" \", word_to_compare, word).ratio()) for word in words], lambda l:float(l[1]))\n",
+    "\n"
    ]
   },
   {
