--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -2,9 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/vlead/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "from bsddb3 import btopen\n",
     "import bcolz, pickle, os, shelve\n",
@@ -38,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,28 +442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0-:--:-- --:--:-- --:--:--     0\n",
-      "./\n",
-      "./assets/\n",
-      "./variables/\n",
-      "./variables/variables.index\n",
-      "./variables/variables.data-00000-of-00001\n",
-      " 96  523M   96  506M    0     0  33.8M      0  0:00:15  0:00:14  0:00:01 44.5M./saved_model.pb\n",
-      "100  523M  100  523M    0     0  34.1M      0  0:00:15  0:00:15 --:--:-- 44.9M\n",
       "WARNING:tensorflow:From /home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
       "Obtained list of words\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('pizza margherita', 0.9946206212043762)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -462,9 +493,12 @@
     "            if sim > max_sim:\n",
     "                max_sim, closest_word = sim, words[i]\n",
     "        del word_embeddings\n",
+    "    del db\n",
     "    return closest_word, max_sim\n",
     "\n",
     "def closestWord(word, method=\"USE\"):\n",
+    "    if method!=\"USE\":\n",
+    "        return max([(word, SequenceMatcher(lambda x: x == \" \", word_to_compare, word).ratio()) for word in words], lambda l:float(l[1]))\n",
     "    word_to_compare = extractUSEEmbeddings([word])\n",
     "    if os.path.isfile(use_embeddings):\n",
     "        with shelve.open(use_embeddings, 'r') as db:\n",
@@ -477,14 +511,14 @@
     "    else:\n",
     "        words = list(word2id_db.keys())\n",
     "        print (\"Obtained list of words\")\n",
-    "        len_part = 100000\n",
+    "#         len_part = 100000\n",
     "        max_sim = -1000\n",
-    "        n_parts = ceil(len(words)/len_part)\n",
-    "        for i in range(n_parts):\n",
-    "            words_part = words[i*len_part:(i+1)*len_part]\n",
-    "            closest_word, max_sim = compare_sim(words_part, word_to_compare, max_sim)\n",
+    "#         n_parts = ceil(len(words)/len_part)\n",
+    "#         for i in range(n_parts):\n",
+    "#             words_part = words[i*len_part:(i+1)*len_part]\n",
+    "        closest_word, max_sim = compare_sim(words, word_to_compare, max_sim)\n",
     "\n",
-    "    del db\n",
+    "    \n",
     "    return closest_word, max_sim\n",
     "    \n",
     "closest_word = closestWord(word)\n",
@@ -493,19 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘/home/Vivek/USE’: No such file or directory\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!mkdir /home/Vivek/USE"
+    "!rm $use_embeddings"
    ]
   },
   {
