--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -877,30 +877,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3265782"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [\"\\t\".join(l.split(\"\\t\")[1:-1]) for l in open(\"../junk/security_dataset.tsv\",\"r\").read().split(\"\\n\")[1:]]\n",
+    "open(\"../files/dataset/dataset.tsv\",\"w\").write(\"\\n\".join(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting torchvision\n",
-      "  Downloading torchvision-0.5.0-cp36-cp36m-manylinux1_x86_64.whl (4.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 4.0 MB 253 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /home/vlead/.local/lib/python3.6/site-packages (from torchvision) (1.18.2)\n",
-      "Requirement already satisfied: six in /home/vlead/.local/lib/python3.6/site-packages (from torchvision) (1.14.0)\n",
-      "Requirement already satisfied: torch==1.4.0 in /home/vlead/.local/lib/python3.6/site-packages (from torchvision) (1.4.0)\n",
-      "Collecting pillow>=4.1.1\n",
-      "  Downloading Pillow-7.1.1-cp36-cp36m-manylinux1_x86_64.whl (2.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 2.1 MB 33.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: pillow, torchvision\n",
-      "Successfully installed pillow-7.1.1 torchvision-0.5.0\n"
+      "document\tcampus card\tnone\r\n",
+      "firebase\tfirebase phoenix\tnone\r\n",
+      "airport\tdelaware airpark\tnone\r\n",
+      "label\tgoner records\tnone\r\n",
+      "diplomat\tpeter wyche (diplomat)\tnone\r\n",
+      "printer\talexander crum\tnone\r\n",
+      "section\tacoma-zuni section\tnone\r\n",
+      "duo\tmadan-harini\tnone\r\n",
+      "ibm\t2\tnone\r\n",
+      "trust no one (internet security)\tapproach\thypernym\r\n"
      ]
     }
    ],
    "source": [
-    "!pip3 install torchvision"
+    "!head ../files/dataset/dataset.tsv"
    ]
   },
   {
@@ -927,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
