Pushing updated mini datset

--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -197,6 +197,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "336853"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = open(\"../files/dataset/dataset.tsv\").read().split(\"\\n\")\n",
+    "dataset_t = [l for l in dataset if l.split(\"\\t\")[-1]!=\"none\"]\n",
+    "dataset_f = [l for l in dataset if l.split(\"\\t\")[-1]==\"none\"]\n",
+    "import random\n",
+    "dataset_t_mini = random.choices(dataset_t, k=int(0.1 * len(dataset_t)))\n",
+    "dataset_f_mini = random.choices(dataset_f, k=10000-int(0.1 * len(dataset_t)))\n",
+    "dataset_mini = dataset_t_mini + dataset_f_mini\n",
+    "random.shuffle(dataset_mini)\n",
+    "open(\"../files/dataset/dataset_mini.tsv\",\"w+\").write(\"\\n\".join(dataset_mini))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9240"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset_f_mini)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -219,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
