--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -197,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "336853"
+       "33268"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,9 @@
     "dataset_f_mini = random.choices(dataset_f, k=10000-int(0.1 * len(dataset_t)))\n",
     "dataset_mini = dataset_t_mini + dataset_f_mini\n",
     "random.shuffle(dataset_mini)\n",
-    "open(\"../files/dataset/dataset_mini.tsv\",\"w+\").write(\"\\n\".join(dataset_mini))"
+    "open(\"../files/dataset/dataset_mini.tsv\",\"w+\").write(\"\\n\".join(dataset_mini))\n",
+    "open(\"../files/dataset/train_mini.tsv\",\"w+\").write(\"\\n\".join(dataset_mini[:int(0.9*len(dataset_mini))]))\n",
+    "open(\"../files/dataset/test_mini.tsv\",\"w+\").write(\"\\n\".join(dataset_mini[int(0.9*len(dataset_mini)):]))"
    ]
   },
   {
