Datasets ready; code updated to run on coropra

--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -654,16 +654,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287258"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lines = [l.split(\"\\t\") for l in open(\"../files/dataset/test_knocked.tsv\",\"r\").read().split(\"\\n\")]\n",
     "final_lines = []\n",
     "for l in lines:\n",
     "    final_lines.append(\"\\t\".join(l))\n",
     "    final_lines.append(\"\\t\".join(l[:2][::-1] + [l[2].replace(\"concept\", \"instance\").replace(\"hypernym\", \"hyponym\")]))\n",
-    "final_lines = list(se)"
+    "final_lines = sorted(list(set(final_lines)))\n",
+    "open(\"../files/dataset/test_knocked.tsv\",\"w+\").write(\"\\n\".join(final_lines))"
    ]
   },
   {
