--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -32725,13 +32725,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "311"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s1.close()\n",
-    "s2.close()\n",
-    "s3.close()"
+    "lines = [l.split(\"\\t\") for l in open(\"../files/Output/Baseline/test_instance.tsv\", \"r\").read().split(\"\\n\")]\n",
+    "true_lines = [l for l in lines if l[2]==\"instance\"]\n",
+    "open(\"../files/Output/Baseline/instances.tsv\",\"w+\").write(\"\\n\".join([\"\\t\".join(l) for l in true_lines]))"
    ]
   },
   {
@@ -32758,7 +32769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
